--- a/templates/bar_graph.html
+++ b/templates/bar_graph.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>Bar Graph</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/static/styles.css" />
@@ -49,6 +49,14 @@
             .attr("width", graph_w)
             .style("background-color", "white");
 
+          // create tooltip for bar graph
+          const tooltip = d3
+            .select("#container")
+            .append("div")
+            .attr("class", "tip")
+            .style("position", "absolute")
+            .style("visibility", "visibility");
+
           // append group element to the svg window will be used as an svg container
           const g = svg
             .append("g")
@@ -79,15 +87,6 @@
               }),
             ])
             .range([graph_h - 300, 0]);
-          console.log(Yscale.domain());
-
-          // create tooltip for bar graph
-          const tooltip = d3
-            .select("#container")
-            .append("div")
-            .attr("class", "tip")
-            .style("position", "absolute")
-            .style("visibility", "visibility");
 
           // create rectangles for bar graph and add
           const rects = g
@@ -97,8 +96,7 @@
             .append("rect")
             .attr("class", "bar")
             .attr("x", (d, i) => Xscale(d.genera) + 20.0)
-            .attr("y", (d) => Yscale(d.rating))
-            .attr("height", (d) => graph_h - 300 - Yscale(d.rating))
+            .attr("y", (d, i) => Yscale(d.rating))
             .attr("width", Xscale.bandwidth() - 50)
             .attr("fill", "steelblue")
             .on("mouseover", (d, i) => {
@@ -116,7 +114,10 @@
             })
             .on("mouseout", function () {
               return tooltip.style("visibility", "hidden");
-            });
+            })
+            .transition()
+            .duration(700)
+            .attr("height", (d) => graph_h - 300 - Yscale(d.rating));
 
           // append a group element that contains X-axis to the svg group element
           const Xaxis = g
