--- a/templates/tabular.html
+++ b/templates/tabular.html
@@ -18,28 +18,7 @@
     <link rel="stylesheet" href="" />
   </head>
   <body>
-    <script async defer>
-      fetch("/static/tabular.json")
-        .then((res) => res.json())
-        .then((tabledata) => {
-          //initialize table
-          var table = new Tabulator("#table", {
-            data: tabledata,
-            layout: "fitDataTable",
-            height: "400px",
-            renderHorizontal: "virtual",
-            columns: [
-              { title: "Reviewer", field: "reviewer" },
-              { title: "Title", field: "title" },
-              { title: "Release Data", field: "release date" },
-              { title: "Genre", field: "genre" },
-              { title: "Rating", field: "rating", sorter: "number" },
-            ],
-          });
-        })
-        .catch((error) => {
-          console.error("Error fetching data:", error);
-        });
-    </script>
+    <div id="table"></div>
+    <script src="/static/tabular.js"></script>
   </body>
 </html>
